<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_header_label"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_name_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:nextFocusUp="@id/buttongotochat"
        android:nextFocusDown="@id/editText4"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_email_label"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:nextFocusUp="@id/editText3"
        android:nextFocusDown="@id/imageButtonPicture"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_picure_label"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButtonPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:nextFocusUp="@id/editText4"
        android:nextFocusDown="@id/buttongotochat"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture_hint" />

    <Button
        android:id="@+id/buttongotochat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText_GoToChat"
        android:nextFocusUp="@id/imageButtonPicture"
        android:nextFocusDown="@id/editText3" />

</LinearLayout>