<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"

 >



    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HeaderText"
        android:textSize="30dp"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_column="0"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText2"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnWeight="1"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckText"
        android:layout_column="1"
        android:layout_columnWeight="1"
        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:contentDescription="@string/ImageBtnDescription"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SwitchText"
        android:layout_column="1"
        android:layout_columnWeight="1"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/HintText"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:autofillHints="@string/HintText"/>


</GridLayout>
