<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_notification"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:nextFocusUp="@id/toWeather"
        android:nextFocusDown="@id/editText2"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_notification"
        android:textSize="24sp"
        android:nextFocusUp="@id/editTextEmail"
        android:nextFocusDown="@id/editText2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:nextFocusUp="@id/editTextEmail"
        android:nextFocusDown="@id/login"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:textSize="24sp"
        android:nextFocusUp="@id/editText2"
        android:nextFocusDown="@id/toWeather"/>

    <Button
        android:id="@+id/toWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Weather Forecast"
        android:nextFocusUp="@id/login"
        android:nextFocusDown="@id/editTextEmail"/>

</LinearLayout>